--- a/.github/workflows/snk.yml
+++ b/.github/workflows/snk.yml
@@ -2,20 +2,25 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # runs every day at midnight UTC
+  workflow_dispatch:  # allows manual run
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: Platane/snk@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate snake animation
+        uses: Platane/snk@v3
         with:
-          github_user_name: TheDeadpool007  # 👈 Change to your GitHub username
+          github_user_name: TheDeadpool007  # 👈 your GitHub username
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
+
       - name: Push to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v3
         with:
